regress/expected/nosuper.out
--
-- no superuser check
--
SET client_min_messages = error;
DROP ROLE IF EXISTS nosuper;
SET client_min_messages = warning;
CREATE ROLE nosuper WITH LOGIN;
-- => OK
\! pg_migrate --execute --alter='ADD COLUMN ns1 INT' --dbname=contrib_regression --table=tbl_cluster --no-superuser-check
INFO: migrating table "public.tbl_cluster"
INFO: altering table with: ADD COLUMN ns1 INT
-- => ERROR
\! pg_migrate --execute --alter='ADD COLUMN ns2 INT' --dbname=contrib_regression --table=tbl_cluster --username=nosuper
ERROR: pg_migrate failed with error: You must be a superuser to use pg_migrate
-- => ERROR
\! pg_migrate --execute --alter='ADD COLUMN ns3 INT' --dbname=contrib_regression --table=tbl_cluster --username=nosuper --no-superuser-check
ERROR: pg_migrate failed with error: ERROR:  permission denied for schema migrate
LINE 1: select migrate.version(), migrate.version_sql()
               ^
DROP ROLE IF EXISTS nosuper;
